fixed js issues on IE and older browsers / fixed form alert issues on IE

--- a/css/style.css
+++ b/css/style.css
@@ -1194,5 +1194,10 @@ footer span {
         margin: 1em auto;
         min-height: 200px;
         max-width: 750px;
-    }  
+    }
+    
+    .form-alert {
+        top: 0;
+        left: 0;
+    }
 }
